# ReleaseNotes_Generator_Agentic_AI

./: .copier-answers.yml  .env.example  .gitignore  AGENTS.md  README.md  app.py  main.py  mkdocs.yml  pyproject.toml  startup.bat  startup.sh
docker/: docker-compose.yml
docs/samples/: ReleaseNotev1.txt
docs/samples/srs/: SRS-001-pdf-ingestion.md  SRS-002-chat-orchestrator.md  SRS-003-streamlit-ui.md  SRS-004-cli-enhancements.md  SRS-005-export-docx-pdf.md  SRS-006-srs-extractor.md  SRS-007-release-writer.md  SRS-008-aws-credentials.md  SRS-009-style-loader.md  SRS-010-session-performance.md
src/release_notes_agent/: pipeline.py
src/release_notes_agent/agents/: example_agent.py  orchestrator.py  release_writer.py  srs_extractor.py
src/release_notes_agent/cli/: app.py
src/release_notes_agent/config/: __init__.py  aws_client.py  prompts.py  settings.py
src/release_notes_agent/models/: __init__.py  schemas.py
src/release_notes_agent/tools/: example_tools.py  exporters.py  item_ops.py  srs_loaders.py  style_loader.py
src/release_notes_agent/ui/: components.py  generate_form.py
src/release_notes_agent/ui/templates/: release_notes.css  release_notes.html.j2
tests/: conftest.py  test_cli.py  test_example_tools.py  test_exporters.py  test_item_ops.py  test_pipeline.py  test_release_writer.py  test_schemas.py  test_settings.py  test_srs_extractor.py  test_srs_loaders.py  test_style_loader.py
tests/fixtures/: make_fixtures.py  sample_release_notes.md  srs_small.docx  srs_small.md  srs_small.txt
