[project]
name = "release-notes-agent"
description = "A Strands AI agent project"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=0.1",
    "strands-agents-tools>=0.1",
    "streamlit>=1.40",
    "boto3>=1.35",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "markdown>=3.6",
    "htmldocx>=0.0.6",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "typer>=0.12",
]
version = "0.0.0"

[dependency-groups]
dev = [
    "commitizen==4.13.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.14.14",
    "mike==2.1.3",
    "mkdocs-autorefs==1.4.3",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-material==9.7.1",
    "mkdocs-section-index==0.3.10",
    "mkdocstrings[python]==1.0.2",
    "pymdown-extensions==10.20.1",
]

[tool.uv]
required-version = ">=0.8.0"
native-tls = true

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project.urls]
"Homepage" = "https://github.com/bravetux/release-notes-agent"
"Source" = "https://github.com/bravetux/release-notes-agent"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--junitxml=report.xml",
]
pythonpath = [
    ".",
    "src",
]

[tool.ruff]
respect-gitignore = true

[tool.commitizen]
version_provider = "uv"
